--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500&display=swap');
 
+
 :root {
-    --primary-color: #7C3AED;
+    --primary-color:#03203C;
     --grey-color: #E5E7EB;
 }
-
+*{
+    transition: .5s linear;
+}
 body {
     font-family: 'Ubuntu',
         sans-serif;
 }
+
 
 /* Heading stying */
 
@@ -44,26 +48,44 @@ hr {
     margin: auto;
     max-width: 600px;
 }
+.container .spantext{
+    display: block;
+    color: var(--primary-color);
+}
 
-/* Styling Links */
+/* TODO: Styling Links  */
 
 .links {
     text-decoration: none;
     padding: .5rem;
-    color: black;
+    color: white;
 }
-
-.primary_link {
+.primary-link {
     background-color: var(--primary-color);
     border: 1px solid black;
     border-radius: 4px;
+    max-width: 5rem;
+    margin: auto;
+    margin-top: 2rem;
+}
+.primary-link:hover{
+    background-color: #fff;
+    color: var(--primary-color);
 }
 
-.secondary_link {
+.secondary-link {
+    margin-top: 2rem;
     background-color: #fff;
     border: 1px solid var(--primary-color);
     border-radius: 4px;
+    color: var(--primary-color);
 }
+.secondary-link:hover{
+    background-color: var(--primary-color);
+    color: white;
+}
+
+
 
 /* Styling Lists */
 
@@ -104,31 +126,41 @@ hr {
     text-decoration: none;
     display: inline;
 }
-
+.nav-links:hover{
+    color: black;
+}
 /* Styling Header  */
 
 .container .hero-img {
     max-width: 30rem;
+    margin-top: 2rem;
 }
 
 section {
-    padding: 2rem 0;
+    padding: 2rem;
     text-align: center;
 }
 
 section .sec-heading {
     text-align: center;
 }
-
+section .sec-text{
+    min-height: 10vh;
+}
 .sec-off-white {
     background-color: var(--grey-color);
 }
 
 /* Styling Footer */
 footer {
+    margin-top: 1rem;
     background-color: var(--primary-color);
     padding: 2rem;
     border-top-right-radius: 1rem;
     text-align: center;
     color: white;
+}
+footer .footer-heading{
+    font-size: 1.5rem;
+    font-weight: bold;
 }
