WIP: Added Projects
Added projects and blogs page.

--- a/components/components.html
+++ b/components/components.html
@@ -61,7 +61,7 @@
         <ul class="links">
             <li class="inline-list-items"><a href="/" class="nav-links">Home</a></li>
             <li class="inline-list-items"><a href="/" class="nav-links">Projects</a></li>
-            <li class="inline-list-items"><a href="/" class="nav-links">About</a></li>
+            <li class="inline-list-items"><a href="/" class="nav-links">Blogs</a></li>
         </ul>
     </nav>
     <hr>
