--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --grey-color: #E5E7EB;
 }
 *{
-    transition: .5s linear;
+    transition: .5s ease-in-out;
     box-sizing: border-box;
 }
 body {
