Feat : Added Responsiveness
Added responsiveness for mobile and small screen devices and other features like as hover and other things.

--- a/components/components.html
+++ b/components/components.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Welcome to Ranjeet's Component Library.</h1>
+    <h1>Welcome to Ranjeet's <span class="spantext"> Component Library.</span></h1>
     <p class="text">I am working on a component library which would make my projects look good and consistent.</p>
     <hr>
     <h2 class="heading_inside">@typography</h2>
@@ -31,8 +31,8 @@
     <hr>
     <h2 class=heading_inside>@links</h2>
     <div class="container">
-        <a href="/" class="links primary-link">Primary links</a>
-        <a href="/" class="links secondary-link">Secondary links</a>
+        <a href="/" class="buttons links primary-link">Primary links</a>
+        <a href="/" class="buttons links secondary-link">Secondary links</a>
     </div>
     <hr>
     <h2 class=heading_inside>@lists</h2>
