--- a/components/components.html
+++ b/components/components.html
@@ -94,7 +94,7 @@
                 <a href="https://twitter.com/Ranjeet39287633" class="nav-links">Twitter</a>
             </li>
             <li class="inline-list-items">
-                <a href="https://github.com/jeetech77" class="nav-links">Github</a>
+                <a href="https://github.com/jeetsdev" class="nav-links">Github</a>
             </li>
         </ul>
     </footer>
